project(samples)
    add_subdirectory(1-clear-color)
    add_subdirectory(2-triangle)
    add_subdirectory(3-model-loading)
    add_subdirectory(4-camera)
    add_subdirectory(5-imgui)
    add_subdirectory(6-textured-rectangle)
    add_subdirectory(7-instancing)
    add_subdirectory(8-framebuffer)
    add_subdirectory(9-uniform-variables)
    add_subdirectory(10-kernel-blur)
    add_subdirectory(11-gui)
    add_subdirectory(12-fonts)
    add_subdirectory(11-textured-model)
    add_subdirectory(advanced)
